force-app/main/default/objects/Immunization__c/Immunization__c.object-meta.xml
<CustomObject>
    <label>Immunization</label>
    <nameField>
        <label>Immunization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Immunizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>