force-app/main/default/objects/Immunization__c/fields/FHIR_Id__c.field-meta.xml
<CustomField>
    <fullName>FHIR_Id__c</fullName>
    <externalId>true</externalId>
    <label>FHIR Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>