force-app/main/default/objects/Immunization__c/fields/Vaccine_Code__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Code__c</fullName>
    <label>Vaccine Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>