force-app/main/default/objects/Immunization__c/fields/Vaccine_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Code_System__c</fullName>
    <description>Default code system for vaccines is CVX. Global value set defaults are package-wide, so CVX is not marked default on LogicEMR_Code_System.</description>
    <label>Vaccine Code System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>