force-app/main/default/objects/Immunization__c/fields/Vaccine_Display__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Display__c</fullName>
    <label>Vaccine Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>