force-app/main/default/objects/Immunization__c/fields/Vaccine_Ref__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Vaccine_Display__c and Vaccine_Code__c remain snapshot fields populated at selection.</description>
    <label>Vaccine</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Immunizations</relationshipLabel>
    <relationshipName>Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>