force-app/main/default/objects/Immunization__c/listViews/All_Immunizations.listView-meta.xml
<ListView>
    <fullName>All_Immunizations</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Vaccine_Display__c</columns>
    <columns>Status__c</columns>
    <columns>Occurrence_Date__c</columns>
    <columns>Lot_Number__c</columns>
    <columns>Performer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Immunizations</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>