force-app/main/default/objects/Immunization__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Vaccine_Display__c</columns>
    <columns>Status__c</columns>
    <columns>Occurrence_Date__c</columns>
    <columns>Lot_Number__c</columns>
    <columns>Performer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>